--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <a href="https://www.instagram.com/jlquinte19/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="https://www.linkedin.com/in/joseph-lucilo-quinte-320018366/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/josephquinte" target="_blank" class="github"><i class="bi bi-github"></i></a>
-          <a href="https://www.onlinejobs.ph/jobseekers/info/4308322"><i class="bi bi-globe"></i></a>
+          <a href="https://www.onlinejobs.ph/jobseekers/info/4308322" target="_blank"><i class="bi bi-globe"></i></a>
         </div>
       </div>
     </header>
@@ -274,7 +274,7 @@
                 </div>
 
                 <div class="cta-section">
-                  <a href="https://www.dropbox.com/scl/fi/xq8snvbxtb0h10ewx3xsz/resume1.pdf?rlkey=etw73didjwi300o23yck5fjfc&st=2nfm810y&dl=0" target="_blank" class="btn btn-primary">
+                  <a href="https://www.dropbox.com/scl/fi/ccqaoxkijj0p1pfrqb3wl/resume-updated.pdf?rlkey=2u899zaefx2c9pnuzp5woay0z&st=9gph2r1j&dl=0" target="_blank" class="btn btn-primary">
                     <i class="bi bi-download"></i>
                     Download Resume
                   </a>
